--- a/Dots.css
+++ b/Dots.css
@@ -1,10 +1,13 @@
 .Dots {
+  width: fit-content;
+  height: fit-content;
   margin: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   resize: both;
   overflow: hidden;
 }
 
-.Dots svg {
+.Dots svg,
+.Dots canvas {
   display: flex;
 }
