--- a/Dots.css
+++ b/Dots.css
@@ -1,10 +1,15 @@
 .Dots {
+  position: relative;
   width: fit-content;
   height: fit-content;
   margin: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   resize: both;
   overflow: hidden;
+}
+
+.Dots[data-shape="circle"] {
+  box-shadow: 0 0 0 1px HotPink;
+  border-radius: 50% 50% 0 50%;
 }
 
 .Dots svg,
@@ -15,4 +20,26 @@
 .Dots[data-shape="circle"] {
   resize: vertical;
   aspect-ratio: 1;
+}
+
+.Dots::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -20px;
+  bottom: -20px;
+  width: 32px;
+  height: 32px;
+  transform: rotate(45deg);
+  border: 1px solid HotPink;
+  z-index: 1;
+  pointer-events: none;
+  background: HotPink;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.Dots:hover::after,
+.Dots[data-shape="circle"]::after {
+  opacity: 1;
 }
