--- a/Dots.css
+++ b/Dots.css
@@ -5,11 +5,17 @@
   margin: 8px;
   resize: both;
   overflow: hidden;
+  box-shadow: 0 0 0 2px transparent;
+  transition: box-shadow 0.4s;
+  border-radius: 4px;
 }
 
+.Dots:hover {
+  box-shadow: 0 0 0 2px DeepPink;
+}
 .Dots[data-shape="circle"] {
-  box-shadow: 0 0 0 1px HotPink;
-  border-radius: 50% 50% 0 50%;
+  box-shadow: 0 0 0 2px DeepPink;
+  border-radius: 50% 50% 4px 50%;
 }
 
 .Dots svg,
@@ -26,17 +32,16 @@
   content: "";
   display: block;
   position: absolute;
-  right: -20px;
-  bottom: -20px;
+  right: -16px;
+  bottom: -16px;
   width: 32px;
   height: 32px;
   transform: rotate(45deg);
-  border: 1px solid HotPink;
   z-index: 1;
   pointer-events: none;
-  background: HotPink;
+  background: DeepPink;
   opacity: 0;
-  transition: opacity 0.3s;
+  transition: opacity 0.4s;
 }
 
 .Dots:hover::after,
