--- a/style/app.css
+++ b/style/app.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
 
-@import "Dots.css";
+@import "Dots-core.css";
+@import "Dots-style.css";
 
 @import "reset.css";
 @import "general.css";
