--- a/style/app.css
+++ b/style/app.css
@@ -1,9 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;400&display=swap");
+
+@import "reset.css";
 
 @import "Dots-core.css";
 @import "Dots-style.css";
 
-@import "reset.css";
 @import "general.css";
 @import "form.css";
 @import "error.css";
