--- a/style/general.css
+++ b/style/general.css
@@ -1,20 +1,14 @@
 /* General */
 
 body {
-  font-family: "Martian Mono", monospace;
+  font-family: Outfit, sans-serif;
   background: Lavender;
   color: Indigo;
-  font-weight: 300;
   line-height: 1.5;
   margin: 24px;
-}
-
-h1 {
-  padding: 8px;
-}
 }
 
 h1 span {
   text-transform: lowercase;
   font-variant: small-caps;
-  
+}
