--- a/style/error.css
+++ b/style/error.css
@@ -1,14 +1,24 @@
 /* Error */
 
 .error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: Tomato;
-  padding: 8px;
-  margin: 8px;
+  padding: 12px 12px;
+  margin: 16px;
   border-radius: 4px;
   color: White;
   width: fit-content;
+  font-size: 16px;
 }
 
-.error:empty {
-  display: none;
+/* Hide error bar if there is no error message */
+.error:has(.error-message:empty) {
+  visibility: hidden;
+}
+
+/* Prevent width of error bar from “dancing” as number changes */
+.error-message {
+  font-variant-numeric: tabular-nums;
 }
