--- a/style/general.css
+++ b/style/general.css
@@ -92,7 +92,10 @@ figure {
 /* Screen Readers */
 
 .screen-reader-only:not(fieldset):not(:focus):not(:active),
-fieldset.screen-reader-only legend {
+fieldset.screen-reader-only legend,
+input[type="color"],
+input[type="radio"],
+input[type="checkbox"] {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   height: 1px;
@@ -106,9 +109,6 @@ fieldset.screen-reader-only {
   border: none;
   margin: 0;
   padding: 0;
-}
-
-fieldset.screen-reader-only legend {
 }
 
 /* Use cases */
@@ -174,11 +174,10 @@ footer {
 
 #controls {
   flex-shrink: 0;
-  /* width: 336px; */
   background: Lavender;
   background: Indigo;
   color: GhostWhite;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 16px 0;
 }
 
@@ -194,7 +193,7 @@ footer {
 .scroll-container {
   position: relative;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   width: 100%;
   max-width: 100%;
   height: 100%;
@@ -207,7 +206,7 @@ footer {
   position: relative;
   width: fit-content;
   height: fit-content;
-  padding: 48px;
+  padding: 24px;
 }
 
 .bottom-container {
