Add controls and canvas to sticky structure

--- a/style/Dots-style.css
+++ b/style/Dots-style.css
@@ -2,7 +2,7 @@
 
 .Dots {
   position: relative;
-  margin: 8px;
+  margin: 0 auto;
   box-shadow: 0 0 0 2px transparent;
   transition: box-shadow 0.4s;
   border-radius: 4px;
