--- a/style/error.css
+++ b/style/error.css
@@ -6,7 +6,7 @@
   align-items: center;
   background: Tomato;
   padding: 8px 12px;
-  margin: 16px;
+  margin: 16px 0;
   border-radius: 4px;
   color: White;
   width: fit-content;
