--- a/style/general.css
+++ b/style/general.css
@@ -173,20 +173,62 @@ footer {
 
 /* Tool */
 
+#playground #tool {
+  border-radius: 4px;
+}
+
 #mobile-warning {
   display: none;
 }
 
-#playground {
-  display: flex;
-  width: calc(100% - 48px);
-  max-width: 100%;
-  height: 90vh;
-  max-height: 800px;
+.sticky-container {
+  position: relative;
+  width: calc(100% - 96px);
   max-width: 1280px;
   margin: 48px auto;
-  border-radius: 4px;
-  overflow: hidden;
+  background: Indigo;
+}
+.sticky-element {
+  position: -webkit-sticky;
+  position: sticky;
+  height: 800px;
+  background: Transparent;
+  color: GhostWhite;
+  width: 100%;
+  pointer-events: none;
+  top: 0;
+  z-index: 1;
+}
+
+.sticky-element > * {
+  pointer-events: all;
+}
+
+.scrolling-content {
+  position: relative;
+  margin-top: -800px;
+  top: 0;
+  left: 304px;
+  background: Lavender;
+  width: calc(100% - 304px);
+  min-height: 800px;
+  height: fit-content;
+  overflow-x: auto;
+  padding: calc(72px + 48px) 48px;
+}
+
+#bar-top {
+  position: absolute;
+  top: 0;
+  left: 304px;
+  width: calc(100% - 304px);
+  padding: 0 16px;
+  height: 72px;
+  background: Lavender;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  pointer-events: none;
 }
 
 #controls {
@@ -196,46 +238,6 @@ footer {
   color: GhostWhite;
   overflow-y: auto;
   padding: 16px 0;
-}
-
-#canvas {
-  display: flex;
-  flex-direction: column;
-  background: Lavender;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.scroll-container {
-  position: relative;
-  display: flex;
-  overflow: auto;
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
-  max-height: 100%;
-}
-
-.scroll-item {
-  display: block;
-  margin: 0 auto;
-  position: relative;
-  width: fit-content;
-  height: fit-content;
-  padding: 48px;
-}
-
-.bottom-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: fit-content;
-}
-
-.top-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: fit-content;
+  width: 304px;
+  height: 800px;
 }
