--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,26 +1,26 @@
 @media (max-width: 960px) {
-  section:has(#playground) h2 {
+  #playground h2 {
     display: none;
   }
-  #playground {
+  #playground #tool {
     height: 50vh;
     background: Lavender;
     color: Indigo;
   }
-  #mobile-warning {
+  #mobile-warning .feather {
+    color: Tomato;
+  }
+  #playground #tool > * {
+    display: none;
+  }
+  #playground #tool #mobile-warning {
     width: 100%;
+    height: 100%;
     padding: 24px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-  }
-  #mobile-warning .feather {
-    color: Tomato;
-  }
-  #playground #controls,
-  #playground #canvas {
-    display: none;
   }
 }
