Add CSS Holographic effects use case, and make formatting consistent

--- a/style/general.css
+++ b/style/general.css
@@ -1,12 +1,13 @@
 /* General */
 
 body {
-  font-family: Outfit, sans-serif;
-  /* background: Lavender; */
   background: GhostWhite;
   color: Indigo;
-  line-height: 1.5;
+  font-family: Outfit, sans-serif;
   font-size: 18px;
+  line-height: 1.5;
+
+  /* background: Lavender; */
 }
 
 h1 {
@@ -43,9 +44,9 @@ header .Sample {
 h1,
 h2,
 h3 {
-  text-align: center;
   line-height: 1;
   margin: 32px 0 16px 0;
+  text-align: center;
 }
 
 .contain {
@@ -55,8 +56,9 @@ h3 {
 
 p {
   margin: 16px auto;
-  /* width: 100%; */
   max-width: 480px;
+
+  /* width: 100%; */
 }
 
 a {
@@ -85,9 +87,9 @@ aside,
 footer,
 section,
 figure {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 /* Screen Readers */
@@ -115,39 +117,43 @@ fieldset.screen-reader-only {
 /* Use cases */
 
 aside {
-  padding: 32px 0;
   background: GhostWhite;
   color: Indigo;
+  padding: 32px 0;
 }
 
 aside .ul-wrapper {
-  width: 100%;
   overflow-x: auto;
+  width: 100%;
 }
 
 aside ul {
   display: flex;
-  /* background: pink; */
-  width: fit-content;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 48px auto;
+  max-width: 1280px;
+  width: fit-content;
 }
 
 aside ul li {
-  width: 33.333vw;
+  flex-shrink: 0;
+  font-size: 16px;
+  margin: 8px;
   max-width: 360px;
   min-width: 288px;
-  margin: 8px;
-  font-size: 16px;
-  flex-shrink: 0;
+  width: 33.333vw;
 }
 
-aside ul img {
+aside ul img,
+aside ul video {
   border-radius: 4px;
-  transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px transparent;
+  transition: box-shadow 0.2s;
 }
 
-aside ul a:hover img {
+aside ul a:hover img,
+aside ul a:hover video {
   box-shadow: 0 0 0 2px DeepPink;
 }
 
@@ -158,10 +164,10 @@ aside small {
 /* Footer */
 
 footer {
-  padding: 32px 16px;
   background: Indigo;
   color: Lavender;
   font-size: 16px;
+  padding: 32px 16px;
   text-align: center;
 }
 
@@ -182,21 +188,21 @@ footer {
 }
 
 .sticky-container {
+  background: Indigo;
+  margin: 48px auto;
+  max-width: 1280px;
   position: relative;
   width: calc(100% - 96px);
-  max-width: 1280px;
-  margin: 48px auto;
-  background: Indigo;
 }
 .sticky-element {
-  position: -webkit-sticky;
-  position: sticky;
-  height: 800px;
   background: Transparent;
   color: GhostWhite;
-  width: 100%;
+  height: 800px;
   pointer-events: none;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
+  width: 100%;
   z-index: 1;
 }
 
@@ -205,38 +211,38 @@ footer {
 }
 
 .scrolling-content {
-  position: relative;
-  margin-top: -800px;
-  top: 0;
-  left: 304px;
   background: Lavender;
-  width: calc(100% - 304px);
-  min-height: 800px;
   height: fit-content;
+  left: 304px;
+  margin-top: -800px;
+  min-height: 800px;
   overflow-x: auto;
   padding: calc(72px + 48px) 48px;
+  position: relative;
+  top: 0;
+  width: calc(100% - 304px);
 }
 
 #bar-top {
-  position: absolute;
-  top: 0;
-  left: 304px;
-  width: calc(100% - 304px);
-  padding: 0 16px;
-  height: 72px;
+  align-items: center;
   background: Lavender;
   display: flex;
+  height: 72px;
   justify-content: space-between;
-  align-items: center;
+  left: 304px;
+  padding: 0 16px;
+  position: absolute;
+  top: 0;
+  width: calc(100% - 304px);
 }
 
 #controls {
-  flex-shrink: 0;
   background: Lavender;
   background: Indigo;
   color: GhostWhite;
+  flex-shrink: 0;
+  height: 800px;
   overflow-y: auto;
   padding: 16px 0;
   width: 304px;
-  height: 800px;
 }
