--- a/style/form.css
+++ b/style/form.css
@@ -9,18 +9,18 @@ form {
 /* Button */
 
 button {
+  background: transparent;
   border: none;
+  border: none;
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 2px DeepPink;
+  color: DeepPink;
+  cursor: pointer;
   font-family: inherit;
   font-size: inherit;
-  border: none;
-  box-shadow: inset 0 0 0 2px DeepPink;
   font-weight: bold;
-  background: transparent;
-  padding: 8px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-  color: DeepPink;
   margin: 8px;
+  padding: 8px 12px;
   user-select: none;
 }
 
@@ -34,30 +34,31 @@ button span {
 }
 
 button:active {
-  transform: translate(0, 2px);
   opacity: 0.75;
+  transform: translate(0, 2px);
 }
 
 button {
-  display: flex;
   align-items: center;
+  display: flex;
 }
 
 button.primary {
-  box-shadow: none;
   background: DeepPink;
+  box-shadow: none;
   color: GhostWhite;
 }
 
 button.primary:focus,
 button.primary:hover {
   background: HotPink;
+
   /* color: DeepPink; */
 }
 
 button.secondary {
-  box-shadow: none;
   background: transparent;
+  box-shadow: none;
 }
 
 button.secondary:focus,
@@ -78,10 +79,10 @@ button.secondary:hover {
 /* Fieldset */
 
 fieldset {
+  border: none;
+  margin: 0;
   padding: 8px 24px 8px 8px;
   width: 100%;
-  margin: 0;
-  border: none;
 }
 
 fieldset + fieldset {
@@ -96,18 +97,18 @@ fieldset + fieldset {
 }
 
 legend {
-  padding: 0 8px 0 8px;
-  font-weight: bold;
   color: GhostWhite;
+  font-weight: bold;
   opacity: 0.5;
+  padding: 0 8px 0 8px;
 }
 
 label {
-  white-space: nowrap;
+  align-items: center;
+  display: flex;
   margin: 2px 0 2px 32px;
   user-select: none;
-  display: flex;
-  align-items: center;
+  white-space: nowrap;
   width: fit-content;
 }
 
@@ -123,16 +124,16 @@ label input:disabled + span {
 /* Input */
 
 input[type="number"] {
+  background: RebeccaPurple;
   border: none;
   border-radius: 4px;
-  background: RebeccaPurple;
-  padding: 4px 8px;
-  height: 28px;
-  width: 160px;
-  font-family: inherit;
   color: inherit;
+  font-family: inherit;
   font-size: 16px;
   font-variant-numeric: tabular-nums;
+  height: 28px;
+  padding: 4px 8px;
+  width: 160px;
 }
 
 input[type="number"]:focus {
@@ -147,27 +148,27 @@ input:out-of-range {
 input[type="number"]:read-only {
   background: transparent;
   border-color: transparent;
-  pointer-events: none;
   cursor: default;
   outline: none;
+  pointer-events: none;
 }
 
 /* Toggle */
 
 .toggle {
-  display: flex;
+  align-self: start;
   border: 2px solid DeepPink;
   border-radius: 4px;
-  overflow: hidden;
-  align-self: start;
+  display: flex;
   margin: 8px 0 0 32px;
+  overflow: hidden;
 }
 
 .toggle label {
-  margin: 0;
-  cursor: pointer;
-  width: fit-content;
   align-self: flex-start;
+  cursor: pointer;
+  margin: 0;
+  width: fit-content;
 }
 
 .toggle label span {
@@ -179,10 +180,10 @@ input[type="number"]:read-only {
 }
 
 .toggle input + span {
-  display: flex;
-  padding: 6px 8px;
   align-items: center;
   color: GhostWhite;
+  display: flex;
+  padding: 6px 8px;
 }
 
 .toggle label:hover input:not(:checked) + span {
@@ -196,12 +197,12 @@ input[type="number"]:read-only {
 /* Color */
 
 input[type="color"] + .color-picker {
-  display: inline-flex;
-  width: 64px;
-  height: 24px;
-  border: 2px solid Lavender;
   background: Red;
+  border: 2px solid Lavender;
   border-radius: 4px;
+  display: inline-flex;
+  height: 24px;
+  width: 64px;
 }
 
 input[type="color"]:focus + .color-picker {
@@ -211,9 +212,9 @@ input[type="color"]:focus + .color-picker {
 /* Input Range */
 
 input[type="range"] {
-  width: 160px;
-  height: 28px;
   border-radius: 4px;
+  height: 28px;
+  width: 160px;
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
@@ -231,21 +232,27 @@ input[type="range"]::-moz-range-track {
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  margin-top: -6px; /* Centers thumb on the track */
   background-color: DeepPink;
-  height: 16px;
-  width: 16px;
   border-radius: 50%;
+  height: 16px;
+  margin-top: -6px;
+  width: 16px;
+
+  /* Centers thumb on the track */
 }
 
 input[type="range"]::-moz-range-thumb {
-  border: none; /*Removes extra border that FF applies*/
-  border-radius: 0; /*Removes default border-radius that FF applies*/
-  margin-top: -6px; /* Centers thumb on the track */
   background-color: DeepPink;
-  height: 16px;
-  width: 16px;
+  border: none;
+  border-radius: 0;
   border-radius: 50%;
+  height: 16px;
+  margin-top: -6px;
+  width: 16px;
+
+  /*Removes extra border that FF applies*/
+  /*Removes default border-radius that FF applies*/
+  /* Centers thumb on the track */
 }
 
 input[type="range"]:focus {
@@ -269,26 +276,26 @@ input[type="checkbox"]:focus + .switch {
 }
 
 input[type="checkbox"] + .switch {
-  display: flex;
-  height: calc(24px + 4px);
-  width: calc(48px + 4px);
   background: RebeccaPurple;
   border: 2px solid RebeccaPurple;
   border-radius: 999px;
+  cursor: pointer;
+  display: flex;
+  height: calc(24px + 4px);
   margin-right: 8px;
   transition: border-color 0.4s, background-color 0.4s;
-  cursor: pointer;
+  width: calc(48px + 4px);
 }
 
 input[type="checkbox"] + .switch::before {
+  background: GhostWhite;
+  border: 2px solid RebeccaPurple;
+  border-radius: 50%;
   content: "";
   display: flex;
-  width: calc(24px - 4px);
   height: calc(24px - 4px);
-  background: GhostWhite;
-  border-radius: 50%;
-  border: 2px solid RebeccaPurple;
   transition: border-color 0.4s, background-color 0.4s, transform 0.4s;
+  width: calc(24px - 4px);
 }
 
 input[type="checkbox"]:checked + .switch {
@@ -297,6 +304,6 @@ input[type="checkbox"]:checked + .switch {
 }
 
 input[type="checkbox"]:checked + .switch::before {
-  transform: translateX(100%);
   border-color: DeepPink;
+  transform: translateX(100%);
 }
